# SimpleRTSPQt

./: CMakeLists.txt
libs/FFmpeg/include/libavutil/: ffversion.h
libs/FFmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc
